# mipt-bit-ml-ops

./: README.md
16.11/: CMakeLists.txt  Dockerfile  README.md  clean.sh  run.sh  setup.py  test_linalg.py
16.11/linalg/: __init__.py
16.11/linalg/python/: bindings.cpp
16.11/linalg/src/: LinearAlgebra.cpp  LinearAlgebra.h
